# chibios-drivers

./: CMakeLists.txt  README.md
boards/WAVESHARE_XCORE407I/: board.c  board.h
demos/: CMakeLists.txt
demos/usb-nrf24l01/: CMakeLists.txt  chconf.h  halconf.h  main.c  mcuconf.h
include/: nrf24l01.h
src/: nrf24l01.c
utils/: usb-serial.c  usb-serial.h
