INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}  
)

SET(PROJECT_SOURCES
    ${CMAKE_SOURCE_DIR}/boards/WAVESHARE_XCORE407I/board.c
    ${CMAKE_SOURCE_DIR}/utils/usb-serial.c
    ${CMAKE_SOURCE_DIR}/src/nrf24l01.c
    main.c
)

SET(STM32_LINKER_SCRIPT ${ChibiOS_LINKER_SCRIPT})

ADD_EXECUTABLE(usb-nrf24l01 ${PROJECT_SOURCES} ${ChibiOS_SOURCES})

STM32_SET_TARGET_PROPERTIES(usb-nrf24l01)
STM32_ADD_HEX_BIN_TARGETS(usb-nrf24l01)